tests/rosetta/out/Fortran/barnsley-fern.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program barnsley_fern
  implicit none
  real :: xMin
  real :: xMax
  real :: yMin
  real :: yMax
  integer :: width
  integer :: nIter
  real :: dx
  real :: dy
  integer :: height
  integer, allocatable, dimension(:) :: grid
  integer :: row
  integer :: seed
  real :: x
  real :: y
  integer :: ix
  integer :: iy
  integer :: i
    integer, allocatable, dimension(:) :: line
    integer :: col
      character(len=100), allocatable, dimension(:) :: app0
    integer, allocatable, dimension(:) :: app1
    integer :: res
    integer :: r
      real :: nx
      real :: ny
    integer :: next
  xMin = -2.182
  xMax = 2.6558
  yMin = 0
  yMax = 9.9983
  width = 60
  nIter = 10000
  dx = (xMax - xMin)
  dy = (yMax - yMin)
  height = int((((width * dy) / dx)))
  allocate(grid(0))
  row = 0
  do while ((row < height))
    allocate(line(0))
    col = 0
    do while ((col < width))
      if (allocated(app0)) deallocate(app0)
      allocate(app0(size(line)+1))
      app0(1:size(line)) = line
      app0(size(line)+1) = ' '
      line = app0
      col = (col + 1)
    end do
    if (allocated(app1)) deallocate(app1)
    allocate(app1(size(grid)+1))
    app1(1:size(grid)) = grid
    app1(size(grid)+1) = line
    grid = app1
    row = (row + 1)
  end do
  seed = 1
  x = 0
  y = 0
  ix = int(((((real(width)) * ((x - xMin))) / dx)))
  iy = int(((((real(height)) * ((yMax - y))) / dy)))
  if ((((((((ix >= 0) .and. ix) < width) .and. iy) >= 0) .and. iy) < height)) then
    grid(((iy)+1),((ix)+1)) = '*'
  end if
  i = 0
  do while ((i < nIter))
    res = randInt(seed,100)
    seed = res(((0)+1))
    r = res(((1)+1))
    if ((r < 85)) then
      nx = (((0.85 * x) + 0.04) * y)
      ny = ((((-0.04 * x) + 0.85) * y) + 1.6)
      x = nx
      y = ny
    else if ((r < 92)) then
      nx = (((0.2 * x) - 0.26) * y)
      ny = ((((0.23 * x) + 0.22) * y) + 1.6)
      x = nx
      y = ny
    else if ((r < 99)) then
      nx = (((-0.15 * x) + 0.28) * y)
      ny = ((((0.26 * x) + 0.24) * y) + 0.44)
      x = nx
      y = ny
    else
      x = 0
      y = (0.16 * y)
    end if
    ix = int(((((real(width)) * ((x - xMin))) / dx)))
    iy = int(((((real(height)) * ((yMax - y))) / dy)))
    if ((((((((ix >= 0) .and. ix) < width) .and. iy) >= 0) .and. iy) < height)) then
      grid(((iy)+1),((ix)+1)) = '*'
    end if
    i = (i + 1)
  end do
  row = 0
  do while ((row < height))
    line = ''
    col = 0
    do while ((col < width))
      line = (line + grid(((row)+1),((col)+1)))
      col = (col + 1)
    end do
    print *, line
    row = (row + 1)
  end do
  contains
  recursive integer function randInt(s,n) result(res)
    integer, intent(in) :: s
    integer, intent(in) :: n
    next = mod((((s * 1664525) + 1013904223)),2147483647)
    res = (/next,mod(next,n)/)
    return
  end function randInt
end program barnsley_fern
